# ChangeLog for kde-base/kdelibs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.1039 2014/12/11 15:45:01 mrueg Exp $

  11 Dec 2014; Manuel Rüger <mrueg@gentoo.org> -kdelibs-4.14.2.ebuild:
  Remove KDE SC 4.14.2

  11 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> kdelibs-4.14.3.ebuild:
  amd64 stable wrt bug #517344

  11 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> kdelibs-4.14.3-r1.ebuild:
  amd64 stable wrt bug #517344

*kdelibs-4.14.3-r1 (04 Dec 2014)

  04 Dec 2014; Michael Palimaka <kensington@gentoo.org>
  +files/kdelibs-4.14.3-trim-crash.patch, +kdelibs-4.14.3-r1.ebuild:
  Backport patch from upstream solving a crash wrt bug #530646.

  03 Dec 2014; Michael Palimaka <kensington@gentoo.org> kdelibs-4.14.3.ebuild:
  Introduce crypt USE flag.

  30 Nov 2014; Michael Palimaka <kensington@gentoo.org> kdelibs-4.14.2.ebuild,
  kdelibs-4.14.3.ebuild:
  dev-libs/libattica[qt4] is going away.

  24 Nov 2014; Michael Palimaka <kensington@gentoo.org> kdelibs-4.14.3.ebuild:
  Update USE dep due to upcoming USE flag removal.

*kdelibs-4.14.3 (16 Nov 2014)

  16 Nov 2014; Alexey Shvetsov <alexxy@gentoo.org> +kdelibs-4.14.3.ebuild:
  Version bump KDE SC 4.14.3

  14 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -kdelibs-4.13.3-r1.ebuild,
  -kdelibs-4.14.1.ebuild:
  Cleanup old.

  25 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -kdelibs-4.14.0.ebuild:
  Cleanup KDE SC 4.14.0

*kdelibs-4.14.2 (25 Oct 2014)

  25 Oct 2014; Michael Palimaka <kensington@gentoo.org> +kdelibs-4.14.2.ebuild:
  Version bump KDE SC 4.14.2

*kdelibs-4.14.1 (16 Sep 2014)

  16 Sep 2014; Johannes Huber <johu@gentoo.org> +kdelibs-4.14.1.ebuild:
  Version bump KDE SC 4.14.1

*kdelibs-4.14.0 (20 Aug 2014)

  20 Aug 2014; Johannes Huber <johu@gentoo.org> +kdelibs-4.14.0.ebuild,
  +files/kdelibs-4.14.0-mimetypes.patch:
  Version bump KDE SC 4.14.0

  09 Aug 2014; Johannes Huber <johu@gentoo.org> -kdelibs-4.12.5-r1.ebuild: