@@ -16,8 +16,7 @@ AUX kdelibs-4.9.3-werror.patch 1521 SHA256 0dbcfe622041387fddac550c37b30bfd5cf36
 DIST kdelibs-4.12.5.tar.xz 11551604 SHA256 9711c3a3d29387dc8b40425cc2957e9f1f2d747d83e9e0213bb8ff6638e68e09 SHA512 222a3a5ad7a728723862fbfcca6886316964ba1b100214132d27d0f8b1bb89b73824aa0c144cd4dbdf37a43d641d9c602befcd94e8095b7bc73bcba431c3b13f WHIRLPOOL f959b45cd7d8fb0ead29153eac830ba54448b53ff0c9959628513e92c90948b128b0413d3fbdf88698d998f3c2d8d819564013987e6d1034242dbd1de23b3518
 DIST kdelibs-4.14.3.tar.xz 11600500 SHA256 f8206da1106184ef0bd031b82701c4910b8dade331c4cdaf1cd9c6c5208cfd9e SHA512 7713cec4851fd4d7d5376afd905515902395ca469cefe1924c05ac0cd4499c28ab6a3c3e7bee10c4cfb3584f2fe93cfb6129d5b550d56d18217866f5fde748cf WHIRLPOOL 9b6d525136cee8e43b832dbbe7451494cc30e15cc58cc34eeab8c9040a9cbe893dc8ba794be50cdb3462e20279bfb41bee22385d3d106a353ef738da510f5c04
 EBUILD kdelibs-4.12.5-r2.ebuild 8687 SHA256 766c49e483380970b54134ef1a3cb49d8a84bdbe718a83f44adc23e0feff675f SHA512 e5d52fb6fb265b95f49808a08d6da06607f3905e5296344ddcad8e7ebee8c218bb7b271c583654369f31f4e4e817cddd4633cd3908ded0b2162df21fa08ea1fa WHIRLPOOL 37af099002f5bb8c66853114436d9f881677d30797897e098eb0a5416d47fc57283847741385d2c9d4e81946be424ae94bcb11300c7b710b46521a870edf3d15
-EBUILD kdelibs-4.14.3-r1.ebuild 8695 SHA256 633268f3514d1421766b8d5ea762bb7af1b59bf436372dfa9d2fa98bf81cd4c3 SHA512 f5e363986ed6783b8a0f06855d4742a77ed6c64a8e7ce585b187cbf7aba40b4171e1b73c1de19e02c1a4592c2517ae7f6f30eb5b50628d7722cd21c4989be8fb WHIRLPOOL bc11f83119396624ff78ddf7d3ed002465d931bb87c1c85e5f6e994b3a0f326b0f4d68ec178b024ad94f66c111c97469bd6dd6fffc5f1784a3084b83a49f2749
-EBUILD kdelibs-4.14.3.ebuild 8647 SHA256 e9a644d5e049e33d6012f5bc040f49015124f8cd93aa52d4475631c0974b46de SHA512 5e46c4be5ccd1f7ef7f67ab021b185b7983c3bb430abef79f16090228a7ba3f5494433bad1f288bc34e654f8ee6b45fdeeec8a00ce488d0a623179860b9c8567 WHIRLPOOL 8d64d76bfabc75991665fd19070e04d4da576213fd1e505f3d81d0c967f28882260577252b26b3767baa01f45f06c363408dab5f963e1169967fb526e0674dc3
-MISC ChangeLog 60635 SHA256 f5082e0d3dad49a508e6e47749a58deaedc7cb7f76289b3659027f9f4f77d86e SHA512 bdff3691da3d1ebbbaa581b956e08fe1826fe6ab5f919bd8791f4cfc85f6850052f65965c79232e14162da1a7fdaf0d4124258f47b3b3b0a0288bbb14910f78d WHIRLPOOL 3e4dc8950e9abd2c5eb58198ef5475f16dfe9bbf4d11e2b5446462994b845fc678d607589aab72e6538f87cfadf85eaea6a7c6fcf707f83f3f72d73ac3d8fc90
+EBUILD kdelibs-4.14.3-r1.ebuild 8695 SHA256 57de89e3c516f5b162fdbb627d8438c20073f4e0d7ad7e831cd240e82d59094b SHA512 c788b66540cd628b79b27365660b992a48f420097c3980e27e1d1e0df9676bfb15b91f6ed552ffc2953b9142967672e70a756cb4bbbafa760bce68d9276d1ab3 WHIRLPOOL cdc3551036887d5627b7c785f7776bfc09335b939a1fddee967fcfcd3b9e6fdc536445f3450d41bb4cf37e1947c9943204c661475b372c3797aecf19bae98aef
+MISC ChangeLog 60783 SHA256 b413c26a0e9a4fd89deee8c9ce558d88a317d4999edc4b49f98c39791b816b08 SHA512 379a736354c8d8ff158743db13d621ef95688bd330e7e5aa41d3c2d04dd4d6bac6e0007dfc7431e987a1965e2f77caf70392088d0eefebb438ee7eb74f271ecd WHIRLPOOL b03ee87e6b6a7bae181be0235e09276cb59ffca1c7f0833cf3bc9254567a337dda866e469287bb2c0f87f9179920274a06e44fb38f9d674a2059b7b03d0b1036
 MISC ChangeLog-2009 110608 SHA256 845ba7764dc9cabd4753d146e82cc0347a0dbbe21a76a4aab453106e7d70ba1f SHA512 c643c3bd742f1c2c4322217b4d9f2992310e9bf86f585ef687cf68f54ed2a86d2950f7f3c3fc5021a2dd472b6db39e17415ca6cde478e4ef4f91317a116889b5 WHIRLPOOL 8dd58bffc294a811176bc3f9882a0fa8a12c02fcdd692bacfccfc9745646d5062d3980553388fcdc835bbbecefd0783f029d07a5999e7208ceece5a93fa36893
 MISC metadata.xml 335 SHA256 ce5c36bcfe52e7bc12d4c7fb83f64b01fd52f5b329365cadd44bd9d59b1e3a3a SHA512 efc588b15e3096574a9ecf0d0edf99f979197cc0e33b2710fd7babb16f2dcaf3cff22197e9fb429ef97590a1288410f77cd987e5c03b3dac8c85236b9af751e6 WHIRLPOOL 6f8cba5c16126a196fb424944b9c12322579ccbe8165821e5cb11611f941a664dee1a31f52927a346da165c25cd829c1f0187e40d209e5ef7c0af7e1afac3347
