@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/kdelibs-4.14.3-r1.ebuild,v 1.2 2014/12/11 12:19:57 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/kdelibs-4.14.3-r1.ebuild,v 1.3 2014/12/14 03:16:58 mrueg Exp $
 
 EAPI=5
 
@@ -117,7 +117,7 @@ PDEPEND="
 	handbook? (
 		|| (
 			$(add_kdebase_dep khelpcenter)
-			kde-base/khelpcenter:5[compat(+)]
+			kde-plasma/khelpcenter:5[compat(+)]
 		)
 	)
 	nepomuk? (
