@@ -1,16 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare prerm pretend setup test unpack
-DEPEND=>=app-misc/strigi-0.7.7 app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets >=dev-libs/libattica-0.4.2 >=dev-libs/libdbusmenu-qt-0.3.2 dev-libs/libpcre[unicode] dev-libs/libxml2 dev-libs/libxslt media-libs/fontconfig media-libs/freetype:2 media-libs/giflib media-libs/libpng:0= media-libs/phonon[qt4] sys-libs/zlib virtual/jpeg:0 >=x11-misc/shared-mime-info-0.60 acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) !aqua? ( x11-libs/libICE x11-libs/libSM x11-libs/libX11 x11-libs/libXau x11-libs/libXcursor x11-libs/libXdmcp x11-libs/libXext x11-libs/libXfixes x11-libs/libXft x11-libs/libXpm x11-libs/libXrender x11-libs/libXScrnSaver x11-libs/libXtst !kernel_SunOS? ( || ( sys-libs/libutempter >=sys-freebsd/freebsd-lib-9.0 ) ) ) bzip2? ( app-arch/bzip2 ) crypt? ( app-crypt/qca:2 ) fam? ( virtual/fam ) jpeg2k? ( media-libs/jasper ) kerberos? ( virtual/krb5 ) nepomuk? ( >=dev-libs/shared-desktop-ontologies-0.11.0 >=dev-libs/soprano-2.9.0[dbus,raptor,redland] ) openexr? ( media-libs/openexr:= media-libs/ilmbase:= ) policykit? ( >=sys-auth/polkit-qt-0.103.0 ) spell? ( app-text/enchant ) ssl? ( dev-libs/openssl ) udev? ( virtual/udev ) zeroconf? ( net-dns/avahi[mdnsresponder-compat] ) doc? ( app-doc/doxygen ) nls? ( virtual/libintl ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) test? ( dev-util/cppunit ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) >=dev-qt/qtdeclarative-4.8.5:4 opengl? ( >=dev-qt/qtopengl-4.8.5:4 ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4
-DESCRIPTION=KDE libraries needed by all KDE programs
-EAPI=5
-HOMEPAGE=http://www.kde.org/
-IUSE=3dnow acl alsa altivec +bzip2 +crypt debug doc fam jpeg2k kerberos lzma mmx nepomuk nls openexr +policykit spell sse sse2 ssl +udev +udisks +upower zeroconf opengl test +handbook aqua
-KEYWORDS=amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
-LICENSE=LGPL-2.1
-PDEPEND=>=kde-base/katepart-4.14.3:4[aqua=] || ( >=kde-base/kfmclient-4.14.3:4[aqua=] x11-misc/xdg-utils ) handbook? ( || ( >=kde-base/khelpcenter-4.14.3:4[aqua=] kde-base/khelpcenter:5[compat(+)] ) ) nepomuk? ( >=kde-base/nepomuk-core-4.14.3:4[aqua=] >=kde-base/nepomuk-widgets-4.14.3:4[aqua=] ) policykit? ( >=sys-auth/polkit-kde-agent-0.99 )
-RDEPEND=>=app-misc/strigi-0.7.7 app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets >=dev-libs/libattica-0.4.2 >=dev-libs/libdbusmenu-qt-0.3.2 dev-libs/libpcre[unicode] dev-libs/libxml2 dev-libs/libxslt media-libs/fontconfig media-libs/freetype:2 media-libs/giflib media-libs/libpng:0= media-libs/phonon[qt4] sys-libs/zlib virtual/jpeg:0 >=x11-misc/shared-mime-info-0.60 acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) !aqua? ( x11-libs/libICE x11-libs/libSM x11-libs/libX11 x11-libs/libXau x11-libs/libXcursor x11-libs/libXdmcp x11-libs/libXext x11-libs/libXfixes x11-libs/libXft x11-libs/libXpm x11-libs/libXrender x11-libs/libXScrnSaver x11-libs/libXtst !kernel_SunOS? ( || ( sys-libs/libutempter >=sys-freebsd/freebsd-lib-9.0 ) ) ) bzip2? ( app-arch/bzip2 ) crypt? ( app-crypt/qca:2 ) fam? ( virtual/fam ) jpeg2k? ( media-libs/jasper ) kerberos? ( virtual/krb5 ) nepomuk? ( >=dev-libs/shared-desktop-ontologies-0.11.0 >=dev-libs/soprano-2.9.0[dbus,raptor,redland] ) openexr? ( media-libs/openexr:= media-libs/ilmbase:= ) policykit? ( >=sys-auth/polkit-qt-0.103.0 ) spell? ( app-text/enchant ) ssl? ( dev-libs/openssl ) udev? ( virtual/udev ) zeroconf? ( net-dns/avahi[mdnsresponder-compat] ) !dev-qt/qtphonon !<=kde-base/plasma-workspace-4.7.1:4 !<=kde-base/kcontrol-4.4.50:4 >=app-crypt/gnupg-2.0.11 app-misc/ca-certificates >=kde-base/kde-env-4.14.3:4[aqua=] sys-apps/dbus[X] !aqua? ( udisks? ( sys-fs/udisks:2 ) x11-apps/iceauth x11-apps/rgb >=x11-misc/xdg-utils-1.0.2-r3 upower? ( || ( >=sys-power/upower-0.9.23 sys-power/upower-pm-utils ) ) ) udev? ( app-misc/media-player-info ) || ( kde-apps/oxygen-icons >=kde-base/oxygen-icons-4.14.3:4[aqua=] ) >=dev-qt/qtdeclarative-4.8.5:4 opengl? ( >=dev-qt/qtopengl-4.8.5:4 ) dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4
-REQUIRED_USE=udisks? ( udev ) upower? ( udev )
-RESTRICT=test
-SLOT=4/4.14
-SRC_URI=mirror://kde/stable/4.14.3/src/kdelibs-4.14.3.tar.xz
-_eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	09b7a4b67499b194d4196dc79ba2e599	kde4-functions	492237eb2823bdc02bc769530501f0ea	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=c5ce70ac215b36e9892c2ee05843ba0f
