@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdelibs
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.1039 2014/12/11 15:45:01 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.1040 2014/12/14 03:16:58 mrueg Exp $
+
+  14 Dec 2014; Manuel Rüger <mrueg@gentoo.org> -kdelibs-4.14.3.ebuild,
+  kdelibs-4.14.3-r1.ebuild:
+  Update khelpcenter:5 dependency. Remove old.
 
   11 Dec 2014; Manuel Rüger <mrueg@gentoo.org> -kdelibs-4.14.2.ebuild:
   Remove KDE SC 4.14.2
